<resources>
    <string name="app_name">JIoT SDK Demo</string>
    <string name="device_name">Device Name</string>
    <string name="product_key">Product Key</string>
    <string name="device_secret">Device Secret</string>
    <string name="run_log_level">运行日志等级</string>
    <string name="connect_server">连接服务器</string>
    <string name="disconnect_server">断开服务器连接</string>
    <string name="report_device_property">上报设备属性</string>
    <string name="report_device_event">上报事件请求</string>
    <string name="property_or_event_name">Property / Event Name</string>
    <string name="value_or_content">Value / Content</string>
    <string name="fetch_connect_status">获取连接状态</string>
    <string name="report_device_version">上报设备版本</string>
    <string name="version">Version</string>
    <string name="start_upgrade">开始升级</string>
    <string name="upgrade_process">升级进度</string>
</resources>
