<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/llDeviceInfo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/device_name"
                tools:ignore="NestedWeights" />
            <EditText
                android:id="@+id/etDeviceName"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:inputType="text"
                tools:ignore="Autofill,LabelFor" />
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/product_key"
                tools:ignore="NestedWeights" />
            <EditText
                android:id="@+id/etProductKey"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:inputType="text"
                tools:ignore="Autofill,LabelFor"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/device_secret"
                tools:ignore="NestedWeights" />
            <EditText
                android:id="@+id/etDeviceSecret"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:inputType="text"
                tools:ignore="Autofill,LabelFor"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/run_log_level"
                tools:ignore="NestedWeights" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:entries="@array/log_level">
            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/btnConnect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/connect_server"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/btnDisconnect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/disconnect_server"
                tools:ignore="ButtonStyle" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/btnReportProperty"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/report_device_property"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/btnReportEvent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/report_device_event"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/property_or_event_name"
                    tools:ignore="NestedWeights" />

                <EditText
                    android:id="@+id/etPropertyEventName"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    tools:ignore="Autofill,LabelFor"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/value_or_content"
                    tools:ignore="NestedWeights" />

                <EditText
                    android:id="@+id/etValueContent"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    tools:ignore="Autofill,LabelFor"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/btnGetConnStatus"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/fetch_connect_status"
                tools:ignore="ButtonStyle,NestedWeights" />
            <Button
                android:id="@+id/btnReportVersion"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/report_device_version"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/version"
                tools:ignore="NestedWeights" />

            <EditText
                android:id="@+id/etVersion"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:inputType="text"
                tools:ignore="Autofill,LabelFor"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llUpgradeInfo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone">
        <Button
            android:id="@+id/btnStartUpgrade"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/start_upgrade" />
        <TextView
            android:id="@+id/tvUpgradeProcess"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/upgrade_process" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvLogInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>


</LinearLayout>
